chore: eslint/prettier

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,32 +1,48 @@
 /* To learn more about Typescript configuration file: https://www.typescriptlang.org/docs/handbook/tsconfig-json.html. */
 /* To learn more about Angular compiler options: https://angular.dev/reference/configs/angular-compiler-options. */
 {
-  "compileOnSave": false,
-  "compilerOptions": {
-    "outDir": "./dist/out-tsc",
-    "strict": true,
-    "noImplicitOverride": true,
-    "noPropertyAccessFromIndexSignature": true,
-    "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true,
-    "skipLibCheck": true,
-    "esModuleInterop": true,
+	"angularCompilerOptions": {
+		"enableI18nLegacyMessageIdFormat": false,
+		"strictInjectionParameters": true,
+		"strictInputAccessModifiers": true,
+    "strictMetadataEmit": true,
+		"strictTemplates": true,
+	},
+	"compileOnSave": false,
+	"compilerOptions": {
+		"declaration": false,
+    "downlevelIteration": true,
+    "emitDecoratorMetadata": true,
+		"esModuleInterop": true,
+		"experimentalDecorators": true,
+    "forceConsistentCasingInFileNames": true,
+		"importHelpers": true,
+		"lib": ["ES2023",	"dom"],
+		"module": "ES2022",
+		"moduleResolution": "node",
+		"noFallthroughCasesInSwitch": true,
+		"noImplicitOverride": true,
+		"noImplicitReturns": true,
+		"noPropertyAccessFromIndexSignature": true,
+    "noUncheckedIndexedAccess": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+		"outDir": "./dist/out-tsc",
+		"skipLibCheck": true,
+		"strict": true,
+    // ---
+    "alwaysStrict": true,
+    "noImplicitAny": true,
+    "noImplicitThis": true,
+    "strictBindCallApply": true,
+    "strictFunctionTypes": true,
+    "strictNullChecks": true,
+    // For awareness on exactOptionalPropertyTypes: https://github.com/angular/components/issues/24078
+    "exactOptionalPropertyTypes" : true, 
+    "strictPropertyInitialization": true,
+    "useUnknownInCatchVariables": true,
+    // --
     "sourceMap": true,
-    "declaration": false,
-    "experimentalDecorators": true,
-    "moduleResolution": "bundler",
-    "importHelpers": true,
-    "target": "ES2022",
-    "module": "ES2022",
-    "lib": [
-      "ES2022",
-      "dom"
-    ]
-  },
-  "angularCompilerOptions": {
-    "enableI18nLegacyMessageIdFormat": false,
-    "strictInjectionParameters": true,
-    "strictInputAccessModifiers": true,
-    "strictTemplates": true
-  }
+		"target": "ES2023"
+	}
 }
