ci: nyx - fix repository names

--- a/.nyx.yaml
+++ b/.nyx.yaml
@@ -85,24 +85,24 @@ services:
     options:
       AUTHENTICATION_TOKEN: '{{#environmentVariable}}NYX_FLYINGFISHFLASH_TOKEN_CODEBERG{{/environmentVariable}}'
       BASE_URI: 'https://codeberg.org/api/v1'
-      REPOSITORY_NAME: 'lorem-list-api'
+      REPOSITORY_NAME: 'lorem-list-client-a'
       REPOSITORY_OWNER: 'lorem-list'
   lan:
     type: 'GITHUB'
     options:
       AUTHENTICATION_TOKEN: '{{#environmentVariable}}NYX_FLYINGFISHFLASH_TOKEN_LAN{{/environmentVariable}}'
       BASE_URI: 'https://forgejo.flyingfishflash.net/api/v1'
-      REPOSITORY_NAME: 'lorem-list-api'
+      REPOSITORY_NAME: 'lorem-list-client-a'
       REPOSITORY_OWNER: 'lorem-list'
-  github:
-    type: 'GITHUB'
-    options:
-      AUTHENTICATION_TOKEN: '{{#environmentVariable}}NYX_FLYINGFISHFLASH_TOKEN_GITHUB{{/environmentVariable}}'
-      REPOSITORY_NAME: 'lorem-list-api'
-      REPOSITORY_OWNER: 'flyingfishflash'
-  gitlab:
-    type: 'GITLAB'
-    options:
-      AUTHENTICATION_TOKEN: '{{#environmentVariable}}NYX_FLYINGFISHFLASH_TOKEN_GITLAB{{/environmentVariable}}'
-      REPOSITORY_NAME: 'lorem-list-api'
-      REPOSITORY_OWNER: 'flyingfishflash'
+  # github:
+  #   type: 'GITHUB'
+  #   options:
+  #     AUTHENTICATION_TOKEN: '{{#environmentVariable}}NYX_FLYINGFISHFLASH_TOKEN_GITHUB{{/environmentVariable}}'
+  #     REPOSITORY_NAME: 'lorem-list-client-a'
+  #     REPOSITORY_OWNER: 'flyingfishflash'
+  # gitlab:
+  #   type: 'GITLAB'
+  #   options:
+  #     AUTHENTICATION_TOKEN: '{{#environmentVariable}}NYX_FLYINGFISHFLASH_TOKEN_GITLAB{{/environmentVariable}}'
+  #     REPOSITORY_NAME: 'lorem-list-client-a'
+  #     REPOSITORY_OWNER: 'flyingfishflash'
