--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "prettier-plugin-organize-imports": "^4.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.3"
+    "zone.js": "^0.14.10"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^18.1.3",
@@ -34,7 +34,7 @@
     "@angular/compiler-cli": "^18.1.3",
     "@types/jasmine": "~5.1.0",
     "angular-eslint": "18.1.0",
-    "eslint": "^9.6.0",
+    "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.1.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
