--- a/package.json
+++ b/package.json
@@ -33,16 +33,16 @@
     "@angular/cli": "^18.1.4",
     "@angular/compiler-cli": "^18.1.4",
     "@types/jasmine": "~5.1.0",
-    "angular-eslint": "18.1.0",
-    "eslint": "^9.8.0",
+    "angular-eslint": "18.3.0",
+    "eslint": "9.9.0",
     "eslint-config-prettier": "^9.1.0",
-    "jasmine-core": "~5.1.0",
+    "jasmine-core": "5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "typescript": "~5.5.2",
-    "typescript-eslint": "8.0.0-alpha.38"
+    "typescript-eslint": "8.1.0"
   }
 }
