--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "prettier": "^3.3.3",
     "prettier-plugin-organize-imports": "^4.0.0",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
+    "tslib": "2.7.0",
     "zone.js": "^0.14.10"
   },
   "devDependencies": {
