--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@angular/compiler-cli": "18.2.4",
     "@types/jasmine": "~5.1.0",
     "angular-eslint": "^18.3.1",
-    "eslint": "9.9.0",
+    "eslint": "^9.10.0",
     "eslint-config-prettier": "^9.1.0",
     "jasmine-core": "5.2.0",
     "karma": "~6.4.0",
