--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "angular-eslint": "^18.3.1",
     "eslint": "^9.10.0",
     "eslint-config-prettier": "^9.1.0",
-    "jasmine-core": "5.2.0",
+    "jasmine-core": "^5.3.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
